<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppTemplate</string>
    <string name="welcome_string">Welcome!</string>
    <string name="menu_settings">Settings</string>
    <string name="text_view">textView</string>
    <string name="title_bar_button1">button1</string>
    <string name="title_bar_button2">button2</string>
    <string name="title_bar_button3">button3</string>
    
    <string name="menu_button1">bottom_button1</string>
    <string name="menu_button2">bottom_button2</string>
    <string name="menu_button3">bottom_button3</string>
    <string name="menu_button4">bottom_button4</string>
    <string name="menu_button5">bottom_button5</string>
    <string name="menu_button6">bottom_button6</string>
    <string name="menu_button7">bottom_button7</string>
    <string name="menu_button8">bottom_button8</string>
    
</resources>